fix: use a better name for routes
It is good practice to use only lowercase letters for routes, as they
are case-sensitive, and this can generate several errors related to
"human action"
